--- a/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
@@ -65,8 +65,8 @@
 				    start: '2017-01-19'
 				},
 				{
-				    title: 'J00002 (S)',
-				    url: 'http://localhost:1041/JobOrder/EditJobOrder',
+				    title: 'Job201702-0001 (L)',
+	                url: 'http://localhost:1042/JobOrder/EditJobOrder?id=1',
 				    start: '2017-01-19'
 				},
 				{
