--- a/Alpha/AlphaMvc/Views/CalendarManPower/IndexCMP.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarManPower/IndexCMP.cshtml
@@ -45,8 +45,8 @@
 					start: '2016-12-16T16:00:00'
 				},
 				{
-				    title: 'Leader1 (J00002)',
-				    url: 'http://localhost:1042/Manpower/IndexManpower',
+				    title: 'Leader1 (Job201702-0003)',
+				    url: '/Manpower/IndexManpower',
 				    start: '2017-01-05'
 				},
 				{
