--- a/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
@@ -66,7 +66,7 @@
 				},
 				{
 				    title: 'Job201702-0001 (L)',
-	                url: 'http://localhost:1042/JobOrder/EditJobOrder?id=1',
+	                url: '/JobOrder/EditJobOrder?id=5',
 				    start: '2017-01-19'
 				},
 				{
