--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -826,6 +826,7 @@
     $(document).ready(function () {
 
         GetData(@Request.Params["id"]);
+        GetJobOrderBorrow(@Request.Params["id"])
 
     });
 
