--- a/Alpha/AlphaMvc/Views/Manpower/IndexManpower.cshtml
+++ b/Alpha/AlphaMvc/Views/Manpower/IndexManpower.cshtml
@@ -1,35 +1,25 @@
 ﻿@{
     ViewBag.Title = "IndexManpower";
 }
+<script src="@Url.Content("~/Scripts/CUDS/CalendarManPower/IndexCalendarManPower.js")" type="text/javascript"></script>
+<h3 id="JobNo"></h3>
 
-<h2>Manpower (J00002)</h2>
+<table class="barattach-2">
+    <tr>
+        <td>
+            <div class="topicattach-2">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
+        </td>
+    </tr>
+</table>
 <table class="table table-striped">
     <thead class="bgthead">
         <tr>
             <th>No.</th>
+            <th class="hidecolumn">ID</th>
             <th>ชื่อ-นามสกุล</th>
             <th>ประเภทพนักงาน</th>
             <th>บัตร</th>
         </tr>
     </thead>
-    <tbody>
-        <tr>
-            <td>1</td>
-            <td>ชื่อ นามสกุล1</td>
-            <td>พนักงานประจำ</td>
-            <td>ช่าง1</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>ชื่อ นามสกุล2</td>
-            <td>พนักงานประจำ</td>
-            <td>ช่าง2</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>ชื่อ นามสกุล2</td>
-            <td>พนักงานประจำ</td>
-            <td>ช่าง2</td>
-        </tr>
-    </tbody>
+    <tbody id="result"></tbody>
 </table>
