--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -89,7 +89,7 @@
                         <li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Technician", "IndexTechnician", "Technician")</div></div></li>
                         <li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Products", "IndexProducts", "Products")</div></div></li>
                         <li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Break Down Cost", "IndexBDC", "BDC")</div></div></li>
-                        <li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Job Order", "IndexJobOrder", "JobOrder")</div></div></li>
+                        @*<li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Job Order", "IndexJobOrder", "JobOrder")</div></div></li>*@
                         @*<li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Test", "View1", "ExpenseMaster")</div></div></li>*@
                         <li class="menuli">
                             <div class="menua">
