--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
         <script src="@Url.Content("~/Scripts/jquery-1.12.4.js")" type="text/javascript"></script>
         @*---------------------------- ConfirmDialog --------------------------*@
         <script src="@Url.Content("~/Scripts/ConfirmDialog/ConfirmDialog.js")" type="text/javascript"></script>
+        <script src="@Url.Content("~/Scripts/CUDS/UserLogin/IndexUserLogin.js")" type="text/javascript"></script>
         @*---------------------------- Menu,Table --------------------------*@
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
         <link href="@Url.Content("~/Content/menu.css")" rel="stylesheet" type="text/css" />
