--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -128,10 +128,17 @@
             </table>
             <ul class="form-style-1">
                 <li>
-                    <button type="button" class="btn btn-primary" onclick="ConfirmDialog('Create','BDC',0)">Save</button>
+                    @*<button type="button" class="btn btn-primary" onclick="ConfirmDialog('Create','BDC',0)">Save</button>*@
+                    <button type="button" class="btn btn-primary" onclick="GetUserName()">Save</button>
                     @*id="Create"*@
                 </li>
             </ul>
         </form>
     }
 </div>
+<script type="text/javascript">
+    function GetUserName()
+    {
+        //alert(mySessionVariable);
+    }
+</script>
