--- a/Alpha/AlphaMvc/Views/Login/IndexLogin.cshtml
+++ b/Alpha/AlphaMvc/Views/Login/IndexLogin.cshtml
@@ -8,33 +8,26 @@
 <link href="@Url.Content("~/Content/LoginStyle.css")" rel="stylesheet" type="text/css" />
 @* -------------------------------------------- form login ----------------------------------- *@
 <script src="@Url.Content("~/Scripts/CUDS/UserLogin/IndexUserLogin.js")" type="text/javascript"></script>
-<form id="dialog" method="post">
+<form id="dialog" >
         <div class="imgcontainer">
             <img src="@Url.Content("~/images/img_avatar2.png")" alt="Avatar" class="avatar"/>
         </div>
 
         <div class="container">
             <label><b>Username</b></label>
-            <input type="text" id="txtUserName" placeholder="Enter Username" name="uname" required>
+            <input name="id" id="txtUserName" type="text" placeholder="UserName">
             <br />
             <label><b>Password</b></label>
-            <input type="password" id="txtpassword" placeholder="Enter Password" name="psw" required>
+            <input name="pass" id="txtpassword" type="password" placeholder="Password">
             <br />
-            <button type="submit" value="Login" id="UserLogin" onblur="Redirect()"></button>
-            @*<button type="submit">@Html.ActionLink("Login", "Index", "Home")</button>*@
-            <input type="checkbox" checked="checked"> Remember me
-            
+            <button type="button" value="Login" onClick="pasuser()"/>Login
+
         </div>
 
         <div class="container">
             <button type="button" class="cancelbtn">Cancel</button>
-            <span class="psw">Forgot <a href="#">password?</a></span>
+            @*<span class="psw">Forgot <a href="#">password?</a></span>*@
         </div>
     </form>
     
 @* -------------------------------------------- form login ----------------------------------- *@
-@*<script type="text/javascript">
-
-    $("#Update").click(function () { init(); });
-
-</script>*@
