--- a/Alpha/AlphaMvc/Views/Login/IndexLogin.cshtml
+++ b/Alpha/AlphaMvc/Views/Login/IndexLogin.cshtml
@@ -15,18 +15,17 @@
 
         <div class="container">
             <label><b>Username</b></label>
-            <input name="id" id="txtUserName" type="text" placeholder="UserName">
+            <input id="txtUserName" type="text" placeholder="UserName">
             <br />
             <label><b>Password</b></label>
-            <input name="pass" id="txtpassword" type="password" placeholder="Password">
+            <input id="txtPassword" type="password" placeholder="Password">
             <br />
-            <button type="button" value="Login" onClick="pasuser()"/>Login
+            <button type="button" value="Login" onClick="UserLogin()"/>Login
 
         </div>
 
         <div class="container">
-            <button type="button" class="cancelbtn">Cancel</button>
-            @*<span class="psw">Forgot <a href="#">password?</a></span>*@
+            <button type="button" id="btnCancel" class="cancelbtn">Cancel</button>
         </div>
     </form>
     
