--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -29,7 +29,10 @@
         <script src="@Url.Content("~/Scripts/EditableGrid/jquery.dynotable.js")" type="text/javascript"></script>
 
         <script language="javascript" type="text/javascript">
-            //GetUserName();
+            $(document).ready(function () {
+                document.getElementById("lblUserName").innerHTML = localStorage['UserName'];
+            });
+            
         $(function () {
             $("#products").accordion();
             //$('#nav li:has(ul)').doubleTapToGo();
