--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -149,6 +149,7 @@
                                                         <th></th>
                                                         <th>Item</th>
                                                         <th class="hidecolumn">ID</th>
+                                                        <th class="hidecolumn">JobID</th>
                                                         <th>Description</th>
                                                         <th>Unit</th>
                                                         <th>Qty</th>
@@ -182,6 +183,9 @@
                                                         <td class="hidecolumn">
                                                             <input id="IncomeID" type="text" value="" class="IncomeID" disabled />
                                                         </td>
+                                                        <td class="hidecolumn">
+                                                            <input id="JobID" type="text" value="" class="JobID" disabled />
+                                                        </td>
                                                         <td>
                                                             <select id="cmbIncomeType" class="Select1"></select>
                                                         </td>
@@ -214,6 +218,9 @@
                                                         </td>
                                                         <td class="hidecolumn">
                                                             <input id="IncomeID" type="text" value="" class="IncomeID" disabled />
+                                                        </td>
+                                                        <td class="hidecolumn">
+                                                            <input id="JobID" type="text" value="" class="JobID" disabled />
                                                         </td>
                                                         <td>
                                                             <select class="Select1"></select>
@@ -261,6 +268,7 @@
                                                         <th></th>
                                                         <th>Item</th>
                                                         <th class="hidecolumn">ID</th>
+                                                        <th class="hidecolumn">JobID</th>
                                                         <th>Description</th>
                                                         <th>Unit</th>
                                                         <th>Qty</th>
@@ -285,6 +293,9 @@
                                                         </td>
                                                         <td class="hidecolumn">
                                                             <input id="ExpenseID" type="text" value="" class="ExpenseID" disabled />
+                                                        </td>
+                                                        <td class="hidecolumn">
+                                                            <input id="JobID" type="text" value="" class="JobID" disabled />
                                                         </td>
                                                         <td>
                                                             <select id="cmbExpenseType" class="ExpenseSelect"></select>
@@ -318,6 +329,9 @@
                                                         </td>
                                                         <td class="hidecolumn">
                                                             <input id="ExpenseID" type="text" value="" class="ExpenseID" disabled />
+                                                        </td>
+                                                        <td class="hidecolumn">
+                                                            <input id="JobID" type="text" value="" class="JobID" disabled />
                                                         </td>
                                                         <td>
                                                             <select id="cmbExpenseType" class="ExpenseSelect"></select>
@@ -569,6 +583,7 @@
                                                     <th></th>
                                                     <th>No.</th>
                                                     <th class="hidecolumn">ID</th>
+                                                    <th class="hidecolumn">JobID</th>
                                                     <th>SO No.</th>
                                                     <th>จำนวนเงิน</th>
                                                     <th colspan="2"></th>
@@ -584,6 +599,9 @@
                                                     </td>
                                                     <td class="hidecolumn">
                                                         <input id="SaleOrderID" type="text" value="" class="SaleOrderID" disabled />
+                                                    </td>
+                                                    <td class="hidecolumn">
+                                                        <input id="JobID" type="text" value="" class="JobID" disabled />
                                                     </td>
                                                     <td>
                                                         <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size180 textleft">
@@ -607,6 +625,9 @@
                                                     </td>
                                                     <td class="hidecolumn">
                                                         <input id="SaleOrderID" type="text" value="" class="SaleOrderID" disabled />
+                                                    </td>
+                                                    <td class="hidecolumn">
+                                                        <input id="JobID" type="text" value="" class="JobID" disabled />
                                                     </td>
                                                     <td>
                                                         <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size180 textleft">
@@ -637,6 +658,7 @@
                                                     <th></th>
                                                     <th>No.</th>
                                                     <th class="hidecolumn">ID</th>
+                                                    <th class="hidecolumn">JobID</th>
                                                     <th>Inv No</th>
                                                     <th>So No.</th>
                                                     <th>จำนวนเงิน</th>
@@ -653,6 +675,9 @@
                                                     </td>
                                                     <td class="hidecolumn">
                                                         <input id="InvoiceID" type="text" value="" class="InvoiceID" disabled />
+                                                    </td>
+                                                    <td class="hidecolumn">
+                                                        <input id="JobID" type="text" value="" class="JobID" disabled />
                                                     </td>
                                                     <td>
                                                         <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft">
@@ -679,6 +704,9 @@
                                                     </td>
                                                     <td class="hidecolumn">
                                                         <input id="InvoiceID" type="text" value="" class="InvoiceID" disabled />
+                                                    </td>
+                                                    <td class="hidecolumn">
+                                                        <input id="JobID" type="text" value="" class="JobID" disabled />
                                                     </td>
                                                     <td>
                                                         <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft">
@@ -712,6 +740,7 @@
                                                     <th></th>
                                                     <th>No.</th>
                                                     <th class="hidecolumn">ID</th>
+                                                    <th class="hidecolumn">JobID</th>
                                                     <th>Rep No.</th>
                                                     <th>Inv No.</th>
                                                     <th>จำนวนเงิน</th>
@@ -728,6 +757,9 @@
                                                     </td>
                                                     <td class="hidecolumn">
                                                         <input id="ReceiptID" type="text" value="" class="ReceiptID" disabled />
+                                                    </td>
+                                                    <td class="hidecolumn">
+                                                        <input id="JobID" type="text" value="" class="JobID" disabled />
                                                     </td>
                                                     <td>
                                                         <input type="text" id="txtReceiptNo" class="ReceiptNo text-size165 textleft">
@@ -754,6 +786,9 @@
                                                     </td>
                                                     <td class="hidecolumn">
                                                         <input id="ReceiptID" type="text" value="" class="ReceiptID" disabled />
+                                                    </td>
+                                                    <td class="hidecolumn">
+                                                        <input id="JobID" type="text" value="" class="JobID" disabled />
                                                     </td>
                                                     <td>
                                                         <input type="text" id="txtReceiptNo" class="ReceiptNo text-size165 textleft">
