--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -68,11 +68,11 @@
                 <ul class="form-style-1">
                     <li>
                         <label class="label-big">ราคาขาย</label>&nbsp;<label class="label-small">ราคาทุน</label>
-                        <input type="text" id = "txtPrice" name="field1" class="field-divided" placeholder="ราคาขาย" disabled />&nbsp;<input type="text" id = "txtCost" name="field2" class="field-divided" placeholder="ราคาทุน" disabled />
+                        <input type="text" id = "txtPrice" name="field1" class="field-divided text-right" placeholder="ราคาขาย" disabled />&nbsp;<input type="text" id = "txtCost" name="field2" class="field-divided text-right" placeholder="ราคาทุน" disabled />
                     </li>
                     <li>
                         <label>กำไร</label>
-                        <input type="text" id = "txtProfit" name="field1" class="field-divided" placeholder="กำไร" disabled />
+                        <input type="text" id = "txtProfit" name="field1" class="field-divided text-right" placeholder="กำไร" disabled />
                     </li>
                 </ul>
                 <ul class="form-style-1">
