--- a/Alpha/AlphaMvc/Views/ExpenseMaster/CreateExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/CreateExpenseMaster.cshtml
@@ -15,14 +15,14 @@
         <ul class="form-style">
             <li>
                 <label>Detail<span class="required">*</span></label>
-                <input type="text" id="Detail" class="field-divided" placeholder="Detail" />
+                <input type="text" id="txtDetail" class="field-divided" placeholder="Detail" />
             </li>
         </ul>
         <br />
         <ul class="form-style">
             <li>
 
-                <button type="button" class="btn btn-primary" onclick="ConfirmDialog('Create','ExpenseMaster',0)">Save</button>
+                <button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'ExpenseMaster', 0)">Save</button>
             </li>
         </ul>
     </form>
