--- a/Alpha/AlphaMvc/Views/IncomeMaster/CreateIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/CreateIncomeMaster.cshtml
@@ -21,7 +21,7 @@
 
             <ul class="form-style">
                 <li>
-                    <button type="button" class="btn btn-primary" onclick="ConfirmDialog('Create','IncomeMaster',0)">Save</button>
+                    <button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'IncomeMaster', 0)">Save</button>
                 </li>
             </ul>
         </form>
