--- a/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
@@ -81,7 +81,7 @@
                     <textarea name="field5" id = "txtRemark" class="field-long field-textarea"></textarea>
                 </li>
                 <li>
-                    <button type="button" class="btn btn-primary" onclick="ConfirmDialog('Create','Product',0)">Save</button>
+                    <button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'Products', 0)">Save</button>
                 </li>
             </ul>
             <ul class="attachgrid">
