--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -70,7 +70,7 @@
                     <textarea name="field5" id="txtRemark" class="field-long field-textarea"></textarea>
                 </li>
                 <li>
-                    <button type="button" class="btn btn-primary" onclick="ConfirmDialog('Update', 'Product', @Request.Params["id"])">Save</button>
+                    <button type="button" class="btn btn-primary" onclick="Isvalidate('Update', 'Product', @Request.Params["id"])">Save</button>
                 </li>
             </ul>
             <ul class="attachgrid">
