--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -128,7 +128,7 @@
             </table>
             <ul class="form-style-1">
                 <li>
-                    <button type="button" class="btn btn-primary" onclick="ConfirmDialog('Create','BDC',0)">Save</button>
+                    <button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'BDC', 0)">Save</button>
                     @*id="Create"*@
                 </li>
             </ul>
