--- a/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
@@ -130,7 +130,7 @@
             </table>
             <ul class="form-style-1">
                 <li>
-                    <button type="button" class="btn btn-primary" onclick="ConfirmDialog('Update', 'BDC', @Request.Params["id"])">Save</button>
+                    <button type="button" class="btn btn-primary" onclick="Isvalidate('Update', 'BDC', @Request.Params["id"])">Save</button>
                 </li>
             </ul>
         </form>
