--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -170,7 +170,7 @@
                                                         </tr>
                                                         <tr>
                                                             <td colspan="6" class="textalign">Discount</td>
-                                                            <td colspan="3"><input id="txtDiscount" type="text" value="" class="text-size168 textright" /></td>
+                                                            <td colspan="3"><input id="txtDiscount" type="text" value="" class="text-size168 textright" onchange="CalSum()" /></td>
                                                         </tr>
                                                         <tr>
                                                             <td colspan="6" class="textalign">Sub Total</td>
@@ -192,16 +192,16 @@
                                                                 <select id="cmbIncomeType" class="Select1"></select>
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtUnitWeight" class="UnitWeight text-size80 textright">
+                                                                <input type="text" id="txtUnitWeight" class="UnitWeight Number text-size80 textright">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtQty" class="Quantity text-size80 textright" placeholder="0" onchange="CalSum()" />
+                                                                <input type="text" id="txtQty" class="Quantity Number text-size80 textright" placeholder="0" onchange="CalSum()" />
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtUnitPrice" class="Price text-size130 textright" placeholder="0" onchange="CalSum()" />
+                                                                <input type="text" id="txtUnitPrice" class="Price Number text-size130 textright" placeholder="0" onchange="CalSum()" />
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtAmount" disabled class="Amount text-size165 txtdisablerow">
+                                                                <input type="text" id="txtAmount" disabled class="Amount Number text-size165 txtdisablerow">
                                                             </td>
 
                                                             <td>
@@ -228,13 +228,13 @@
                                                                 <input type="text" id="txtUnitWeight" class="UnitWeight text-size80 textright" />
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtQty" class="Quantity text-size80 textright" onchange="CalSum()" />
+                                                                <input type="text" id="txtQty" class="Quantity Number text-size80 textright" onchange="CalSum()" />
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtUnitPrice" class="Price text-size130 textright" onchange="CalSum()" />
+                                                                <input type="text" id="txtUnitPrice" class="Price Number text-size130 textright" onchange="CalSum()" />
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtAmount" disabled class="Amount text-size165 txtdisablerow">
+                                                                <input type="text" id="txtAmount" disabled class="Amount Number text-size165 txtdisablerow">
                                                             </td>
                                                             <td>
                                                                 <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -246,7 +246,8 @@
                                                     </tbody>
                                                 </table>
                                             </div>
-                                            <button id="add-row6" onclick="AddRowIncome()" class="btn btn-primary">Add Row</button>
+                                            <a id="add-row6" href="#" onclick="AddRowIncome()">+ Add Row</a>
+                                            @*<button id="add-row6" onclick="AddRowIncome()" class="btn btn-primary">Add Row</button>*@
                                             @* Expense *@
                                                 <table class="tableexpense">
                                                     <tr>
@@ -299,13 +300,13 @@
                                                                 <select class="unitSelect"></select>
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtQty" name="Qty" class="Quantity text-size80" onchange="CalSumExpense()">
+                                                                <input type="text" id="txtQty" name="Qty" class="Quantity Number text-size80" onchange="CalSumExpense()">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtUnitPrice" name="UnitPrice" class="Price text-size130" onchange="CalSumExpense()">
+                                                                <input type="text" id="txtUnitPrice" name="UnitPrice" class="Price Number text-size130" onchange="CalSumExpense()">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtAmount" name="Amount" class="Amount text-size165 txtdisablerow" disabled>
+                                                                <input type="text" id="txtAmount" name="Amount" class="Amount1 Number text-size165 txtdisablerow" disabled>
                                                             </td>
 
                                                             <td>
@@ -332,13 +333,13 @@
                                                                 <select class="unitSelect"></select>
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtQty" name="Qty" class="Quantity text-size80" onchange="CalSumExpense()">
+                                                                <input type="text" id="txtQty" name="Qty" class="Quantity Number text-size80" onchange="CalSumExpense()">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtUnitPrice" name="UnitPrice" class="Price text-size130" onchange="CalSumExpense()">
+                                                                <input type="text" id="txtUnitPrice" name="UnitPrice" class="Price Number text-size130" onchange="CalSumExpense()">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtAmount" name="Amount" class="Amount text-size165 txtdisablerow" disabled>
+                                                                <input type="text" id="txtAmount" name="Amount" class="Amount1 Number text-size165 txtdisablerow" disabled>
                                                             </td>
                                                             <td>
                                                                 <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -350,7 +351,8 @@
                                                     </tbody>
                                                 </table>
                                                 </div>
-                                            <button id="add-row7" onclick="AddRowExpense()" class="btn btn-primary">Add Row</button>
+                                            <a id="add-row7" href="#" onclick="AddRowExpense()">+ Add Row</a>
+                                            @*<button id="add-row7" onclick="AddRowExpense()" class="btn btn-primary">Add Row</button>*@
                                             @*<div class="myDIV">*@
                                                 <table class="tableexpense">
                                                     <tr>
@@ -597,7 +599,7 @@
                                                             <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size180 textleft">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtAmount" class="Amount text-size180 textright">
+                                                            <input type="text" id="txtAmount" class="Amount2 Number text-size180 textright">
                                                         </td>
                                                         <td>
                                                             <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -620,7 +622,7 @@
                                                             <input type="text" id="txtSaleOrderNo"  class="SaleOrderNo text-size180 textleft">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtAmount" class="Amoun text-size180 textright">
+                                                            <input type="text" id="txtAmount" class="Amount2 Number text-size180 textright">
                                                         </td>
                                                         <td>
                                                             <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -631,7 +633,8 @@
                                                     </tr>
                                                 </tbody>
                                             </table>
-                                            <button id="add-row3" class="btn btn-primary">Add Row</button>
+                                            <a id="add-row3" href="#">+ Add Row</a>
+                                            @*<button id="add-row3" class="btn btn-primary">Add Row</button>*@
                                         </div>
                                         <p></p>
 
@@ -670,7 +673,7 @@
                                                             <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size165 textleft">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtAmount" class="Amount text-size165 textright">
+                                                            <input type="text" id="txtAmount" class="Amount3 Number text-size165 textright">
                                                         </td>
                                                         <td>
                                                             <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -696,7 +699,7 @@
                                                             <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size165 textleft">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtAmount" class="Amount text-size165 textright">
+                                                            <input type="text" id="txtAmount" class="Amount3 Number text-size165 textright">
                                                         </td>
                                                         <td>
                                                             <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -707,7 +710,8 @@
                                                     </tr>
                                                 </tbody>
                                             </table>
-                                            <button id="add-row4" class="btn btn-primary">Add Row</button>
+                                            <a id="add-row4" href="#">+ Add Row</a>
+                                            @*<button id="add-row4" class="btn btn-primary">Add Row</button>*@
                                         </div>
                                         <p></p>
 
@@ -746,7 +750,7 @@
                                                             <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtAmount" class="Amount text-size165 textright">
+                                                            <input type="text" id="txtAmount" class="Amount4 Number text-size165 textright">
                                                         </td>
                                                         <td>
                                                             <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
@@ -772,7 +776,7 @@
                                                             <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtAmount" class="Amount text-size165 textright">
+                                                            <input type="text" id="txtAmount" class="Amount4 Number text-size165 textright">
                                                         </td>
                                                         <td>
                                                             <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
@@ -783,7 +787,8 @@
                                                     </tr>
                                                 </tbody>
                                             </table>
-                                            <button id="add-row5" class="btn btn-primary">Add Row</button>
+                                            <a id="add-row5" href="#">+ Add Row</a>
+                                            @*<button id="add-row5" class="btn btn-primary">Add Row</button>*@
                                         </div>
                                         <p></p>
 
@@ -828,7 +833,7 @@
 
             <ul class="form-style-1">
                 <li>
-                    <button type="button" class="btn btn-primary" onclick="ConfirmDialog('Create','JobOrder',0)">Save</button>
+                    <button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'JobOrder', 0)">Save</button>
                 </li>
             </ul>
         </form>
