--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -170,7 +170,7 @@
                                                         </tr>
                                                         <tr>
                                                             <td colspan="6" class="textalign">Discount</td>
-                                                            <td colspan="3"><input id="txtDiscount" type="text" value="" class="text-size168 textright" onchange="CalSum()" /></td>
+                                                            <td colspan="3"><input id="txtDiscount" type="text" value="" class="Number text-size168 textright" onchange="CalSum()" /></td>
                                                         </tr>
                                                         <tr>
                                                             <td colspan="6" class="textalign">Sub Total</td>
