--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -27,6 +27,8 @@
         <link href="@Url.Content("~/Content/editable/addrowstyle.css")" rel="stylesheet" type="text/css" />
         <script src="@Url.Content("~/Scripts/EditableGrid/highlight.min.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/EditableGrid/jquery.dynotable.js")" type="text/javascript"></script>
+        @* ---------------------------- DatePicker -------------------------- *@
+        <link href="@Url.Content("~/Content/datepicker/santiago.datepicker.css")" rel="stylesheet" type="text/css" />
 
         <script language="javascript" type="text/javascript">
             $(document).ready(function () {
