--- a/Alpha/AlphaMvc/Views/IncomeMaster/EditIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/EditIncomeMaster.cshtml
@@ -13,13 +13,13 @@
             <ul class="form-style">
                 <li>
                     <label>Detail<span class="required">*</span></label>
-                    <input type="text" id="txtDetail" class="field-divided" placeholder="Detail" />
+                    <input type="text" id="txtDetail" class="field-divided text-floatleft" placeholder="Detail" />&nbsp;<button type="button" class="btn btn-primary" onclick="Isvalidate('Update', 'IncomeMaster', @Request.Params["id"])">Save</button>
                 </li>
             </ul>
 
             <ul class="form-style">
                 <li>
-                    <button type="button" class="btn btn-primary" onclick="Isvalidate('Update', 'IncomeMaster', @Request.Params["id"])">Save</button>
+                    
                 </li>
             </ul>
         </form>
