--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -117,6 +117,7 @@
         <div id="body">
             <section class="content-wrapper main-content clear-fix">     
                 @RenderBody()
+                @RenderSection("ShowRptViewer", required: false)
             </section>
         </div>
         <footer>
