--- a/Alpha/AlphaMvc/Views/IncomeMaster/EditIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/EditIncomeMaster.cshtml
@@ -27,6 +27,7 @@
     }
 <script type="text/javascript">
     $(document).ready(function () {
+        alert(@Request.Params["id"]);
         GetData(@Request.Params["id"]);
     });
 </script>
