--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -35,10 +35,10 @@
                 document.getElementById("lblUserName").innerHTML = localStorage['UserName'];
             });
             
-        $(function () {
-            $("#products").accordion();
-            //$('#nav li:has(ul)').doubleTapToGo();
-        });
+        //$(function () {
+        //    $("#products").accordion();
+        //    //$('#nav li:has(ul)').doubleTapToGo();
+        //});
         function myFunction() {
             var x = document.getElementById("myTopnav");
             if (x.className === "topnav") {
