--- a/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
@@ -11,59 +11,97 @@
 <script src="@Url.Content("~/Scripts/calendar/fullcalendar.min.js")" type="text/javascript"></script>
 
 <script>
+    $(document).ready(function () {
+        function GetEvent()
+        {
+            alert('test0');
+            // 2 คือเดือนที่2 (กุมภาพันธ์)
+            var dataObject = { calendarJobModel: 2 }
+            console.log(dataObject);
+            $.ajax(
+               {
+                   url: 'http://localhost:13131/api/CalendarJobOrder',
+                   type: 'GET',
+                   async: false,
+                   data: dataObject,
+                   datatype: 'json',
+                   success: function (data) {
+                       data = JSON.parse(data);
+                       var events = [];
+                        alert('test');
+                        $.each(data, function () {
+                            //alert(index, value);
 
-    $(document).ready(function() {
-        var event = [{
-            title: 'All Day Event',
-            start: '2016-12-01'
-        },
-        {
-            title: 'Long Event',
-            start: '2016-12-07',
-            end: '2016-12-10'
-        },
-        {
-            id: 999,
-            title: 'Repeating Event',
-            start: '2016-12-09T16:00:00'
-        },
-        {
-            id: 999,
-            title: 'Repeating Event',
-            start: '2016-12-16T16:00:00'
-        },
-        {
-            title: 'J00006 (H)',
-            start: '2017-01-05'
-        },
-        {
-            title: 'J00006 (H)',
-            start: '2017-01-05'
-        },
-        {
-            title: 'J00005 (S)',
-            start: '2017-01-19'
-        },
-        {
-            title: 'J00001 (O)',
-            start: '2017-01-19'
-        },
-        {
-            title: 'J00001 (O)',
-            start: '2017-01-19'
-        },
-        {
-            title: 'Job201702-0001 (L)',
-            url: '/JobOrder/EditJobOrder?id=5',
-            start: '2017-01-19',
-        },
-        {
-            title: 'Click for Google',
-            url: 'http://google.com/',
-            start: '2016-12-28'
-        }];
+                            events.push({
+                                //id: value['id']
+                                id: data.Table[i].ID
+                                //all data
+                            });
+                            console.log(value);
+                        });
+                        console.log(events);
+                        return events;
+                        //callback(events);
+                   },
+                   error: function (msg) {
+                       alert(msg);
+                   }
 
-		$('#calendar').fullCalendar({
+               });
+        }
+        //var event = [{
+        //    title: 'All Day Event',
+        //    start: '2016-12-01'
+        //},
+        //{
+        //    title: 'Long Event',
+        //    start: '2016-12-07',
+        //    end: '2016-12-10'
+        //},
+        //{
+        //    id: 999,
+        //    title: 'Repeating Event',
+        //    start: '2016-12-09T16:00:00'
+        //},
+        //{
+        //    id: 999,
+        //    title: 'Repeating Event',
+        //    start: '2016-12-16T16:00:00'
+        //},
+        //{
+        //    title: 'J00006 (H)',
+        //    start: '2017-01-05'
+        //},
+        //{
+        //    title: 'J00006 (H)',
+        //    start: '2017-01-05'
+        //},
+        //{
+        //    title: 'J00005 (S)',
+        //    start: '2017-01-19'
+        //},
+        //{
+        //    title: 'J00001 (O)',
+        //    start: '2017-01-19'
+        //},
+        //{
+        //    title: 'J00001 (O)',
+        //    start: '2017-01-19'
+        //},
+        //{
+        //    title: 'Job201702-0001 (L)',
+        //    url: '/JobOrder/EditJobOrder?id=5',
+        //    start: '2017-01-19',
+        //},
+        //{
+        //    title: 'Click for Google',
+        //    url: 'http://google.com/',
+        //    start: '2016-12-28'
+        //}];
+        var event = GetEvent();
+        console.log(event);
+        $('#calendar').fullCalendar({
+            async: false,
 			header: {
 				left: 'prev,next',
 				center: 'title',
@@ -73,9 +111,9 @@
 			navLinks: true, // can click day/week names to navigate views
 			editable: true,
 			eventLimit: true, // allow "more" link when too many events
-			events: event
-		});
+		    events: event
 
+		});
 	});
 
 </script>
