--- a/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
@@ -4,6 +4,9 @@
 
 <h2>BreakDownCost</h2>
 
+    <input type="checkbox" id="checkbox2" role="button" />
+
+
 @*<br />*@
 @* ------------------------------- grid  -------------------------------*@
 <script src="@Url.Content("~/Scripts/EditableGrid/paging.js")" type="text/javascript"></script>
@@ -37,10 +40,19 @@
         font-family: Arial, sans-serif;
     }
 </style>
+<div class="checkbox checkbox-primary">
+    <input id="checkbox2" type="checkbox" checked="">
+    <label for="checkbox2">
+        Primary
+    </label>
+</div>
 <table class="barattach-2">
     <tr>
         <td>
+            
             <a href="/BDC/CreateBDC"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd "/></a>
+            @*<input id="CheckAll" type="checkbox" />*@
+            
             <div class="topicattach-2">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
         </td>
     </tr>
