--- a/Alpha/AlphaMvc/Content/Style.css
+++ b/Alpha/AlphaMvc/Content/Style.css
@@ -892,8 +892,16 @@ select{
     padding-right: 5px;
     /* margin-right: 87%; */
     /* margin-left: 8px; */
-    margin-left: 75%;
+    /*margin-left: 75%;*/
+    margin-left: 60%;
     margin-right: 0%;
+}
+.chkShowAll{
+    margin-right: 10px;
+}
+.chkShowAllinput
+{
+    margin-right: 10px;
 }
  @media screen and (max-width:680px) {
     .topicdetail{
