--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                     </section>*@
                     @*<nav>*@
                     <label for="show-menu" class="show-menu">Menu ☰</label>
-                    <input type="checkbox" id="show-menu" role="button">
+                    <input type="checkbox" id="show-menu" role="button" class="Hidecheckbox">
                     <ul id="menu" class="menuul">
                         <li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Home", "Index", "Home")</div></div></li>
                         <li class="menuli">
