--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -77,6 +77,7 @@
                                     <ul class="hidden">
                                         <li class="menuli"><div class="submenua">@Html.ActionLink("Income", "IndexIncomeMaster", "IncomeMaster")</div></li>
                                         <li class="menuli"><div class="submenua">@Html.ActionLink("Expense", "IndexExpenseMaster", "ExpenseMaster")</div></li>
+                                        <li class="menuli"><div class="submenua">@Html.ActionLink("RoleMaster", "IndexRoleMaster", "RoleMaster")</div></li>
                                     </ul>
                                 </div>
                             </div>
