--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -105,6 +105,7 @@
             <li>
                 <input type="text" id="txtJobReference" name="field1" class="field-divided" placeholder="Job Reference" disabled />
                 <input type="hidden" id="hidBDCID" />
+                <input type="hidden" id="hidJobID" />
             </li>
             <li>
                 <label>หมายเหตุ</label>
