--- a/Alpha/AlphaMvc/Views/RoleMaster/IndexRoleMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/RoleMaster/IndexRoleMaster.cshtml
@@ -4,26 +4,27 @@
 
 <h2>IndexRoleMaster</h2>
 <script src="@Url.Content("~/Scripts/CUDS/RoleMaster/IndexRoleMaster.js")" type="text/javascript"></script>
-@*<div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>*@
+<div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 @* ------------------------------- Header -------------------------------*@
 @*//===================================================================CSS w3school*@
 
-    <table id="tabIncome" class="example">
+    <table id="arwRoleMaster" class="example">
         <thead class="theader">
             <tr>
                 <th></th>
                 <th>Item</th>
                 <th class="hidecolumn">ID</th>
-                <th>Description</th>
-                <th>Unit</th>
-                <th>Qty</th>
-                <th class="wraptext">Unit Price</th>
-                <th>Amount</th>
+                <th>RoleName</th>
+                <th>View</th>
+                <th>Insert</th>
+                <th class="wraptext">Update</th>
+                <th>Delete</th>
+                <th>MenuType</th>
                 <th colspan="2"></th>
             </tr>
         </thead>
         <tbody id="tBodyRowRole">
-            <tr>
+            <tr class="RowCal">
                 <td>
                     <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
                 </td>
@@ -31,22 +32,25 @@
                     <input id="No" type="text" value="" class="tdno" disabled />
                 </td>
                 <td class="hidecolumn">
-                    <input id="IncomeID" type="text" value="" class="IncomeID" disabled />
+                    <input id="RoleMasterID" type="text" value="" class="RoleMasterID" disabled />
                 </td>
                 <td>
-                    <select id="cmbIncomeType" class="Select1"></select>
+                    <select id="cmbRole" class="cmbRole"></select>
                 </td>
                 <td>
-                    <input type="text" id="txtUnitWeight" class="UnitWeight Number text-size80 textright">
+                    <input id="chkIsView" type="checkbox" class="IsView">
                 </td>
                 <td>
-                    <input type="text" id="txtQty" class="Quantity Number text-size80 textright" placeholder="0" onchange="CalSum()" />
+                    <input id="chkIsInsert" type="checkbox" class="IsInsert" onchange="GetChecked()">
                 </td>
                 <td>
-                    <input type="text" id="txtUnitPrice" class="Price Number text-size130 textright" placeholder="0" onchange="CalSum()" />
+                    <input id="chkIsUpdate" type="checkbox" class="IsUpdate" onchange="GetChecked()">
                 </td>
                 <td>
-                    <input type="text" id="txtAmount" disabled class="Amount Number text-size165 txtdisablerow">
+                    <input id="chkIsDelete" type="checkbox" class="IsDelete">
+                </td>
+                <td>
+                    <select id="cmbMenuType" class="cmbMenuType"></select>
                 </td>
 
                 <td>
@@ -56,7 +60,7 @@
                     <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                 </td>
             </tr>
-            <tr id="add-template">
+            <tr class="RowCal" id="add-template">
                 <td>
                     <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
                 </td>
@@ -64,22 +68,25 @@
                     <input id="No" type="text" value="" class="tdno" disabled />
                 </td>
                 <td class="hidecolumn">
-                    <input id="IncomeID" type="text" value="" class="IncomeID" disabled />
+                    <input id="RoleMasterID" type="text" value="" class="RoleMasterID" disabled />
                 </td>
                 <td>
-                    <select class="Select1"></select>
+                    <select id="cmbRole" class="cmbRole"></select>
                 </td>
                 <td>
-                    <input type="text" id="txtUnitWeight" class="UnitWeight text-size80 textright" />
+                    <input id="chkIsView" type="checkbox" class="IsView">
                 </td>
                 <td>
-                    <input type="text" id="txtQty" class="Quantity Number text-size80 textright" onchange="CalSum()" />
+                    <input id="chkIsInsert" type="checkbox" class="IsInsert" onchange="GetChecked()">
                 </td>
                 <td>
-                    <input type="text" id="txtUnitPrice" class="Price Number text-size130 textright" onchange="CalSum()" />
+                    <input id="chkIsUpdate" type="checkbox" class="IsUpdate" onchange="GetChecked()">
                 </td>
                 <td>
-                    <input type="text" id="txtAmount" disabled class="Amount Number text-size165 txtdisablerow">
+                    <input id="chkIsDelete" type="checkbox" class="IsDelete">
+                </td>
+                <td>
+                    <select id="cmbMenuType" class="cmbMenuType"></select>
                 </td>
                 <td>
                     <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -90,5 +97,7 @@
             </tr>
         </tbody>
     </table>
-<a id="add-row" href="#" onclick="AddRowReleMaster()">+ Add Row</a>
+<a id="add-row" href="#" onclick="AddRowRoleMaster()">+ Add Row</a>
+
+<button type="button" class="btn btn-primary" onclick="ConfirmDialog('Create', 'RoleMaster', 0)">Save</button>
 
