--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -78,6 +78,7 @@
                                         <li class="menuli"><div class="submenua">@Html.ActionLink("Income", "IndexIncomeMaster", "IncomeMaster")</div></li>
                                         <li class="menuli"><div class="submenua">@Html.ActionLink("Expense", "IndexExpenseMaster", "ExpenseMaster")</div></li>
                                         <li class="menuli"><div class="submenua">@Html.ActionLink("RoleMaster", "IndexRoleMaster", "RoleMaster")</div></li>
+                                        <li class="menuli"><div class="submenua">@Html.ActionLink("Authorization", "IndexAuthorization", "Authorization")</div></li>
                                     </ul>
                                 </div>
                             </div>
