--- a/Alpha/AlphaMvc/Views/Authorization/IndexAuthorization.cshtml
+++ b/Alpha/AlphaMvc/Views/Authorization/IndexAuthorization.cshtml
@@ -31,6 +31,14 @@
         font-family: Arial, sans-serif;
     }
 </style>
+<table class="barattach-2">
+    <tr>
+        <td>
+            <a href="/Authorization/CreateAuthorization"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd" /></a>
+            <div class="topicattach-2">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
+        </td>
+    </tr>
+</table>
 <div class="table-responsive">
     <table class="table table-striped">
         <thead class="bgthead">
