--- a/Alpha/AlphaMvc/Views/Authorization/CreateAuthorization.cshtml
+++ b/Alpha/AlphaMvc/Views/Authorization/CreateAuthorization.cshtml
@@ -5,12 +5,42 @@
 <h2>CreateAuthorization</h2>
 <script src="@Url.Content("~/Scripts/CUDS/Authorization/CreateAuthorization.js")" type="text/javascript"></script>
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
+<!-- Modal -->
+<div class="modal fade" id="userDialog" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Customer</h4>
+            </div>
+            <div class="modal-body">
+                <div class="table-responsive">
+                    <table id="tblCustomer" class="table table-striped table-hover">
+                        <thead class="bgthead">
+                            <tr>
+                                <th>No.</th>
+                                <th>ผู้ใช้งาน</th>
+                            </tr>
+                        </thead>
+                        <tbody id="userBody"></tbody>
+                    </table>
+                </div>
+                @*<ul class="pagination pagination-lg pager" id="myPager"></ul>*@
+            </div>
+        </div>
+
+    </div>
+</div>
+@* ================================================================================= *@
 <ul class="form-style-1">
     <li>
         <label>User</label>
-        <input type="text" id="txtUser" class="field-divided" placeholder="User" disabled />
-        <input type="hidden" id="hidUserID" />
-    </li>
+        <input type="text" id="txtUser" class="field-divided" placeholder="User" disabled />&nbsp;<a href="#" data-toggle="modal" data-target="#userDialog">
+    <img src="@Url.Content("~/Images/search-engine.png")" class="btnimage" /></a>
+    <input type="hidden" id="hidUserID" />
+</li>
 </ul>
 <table class="tabbar">
     <tr>
